deploy_proxy/apps_v1_deployment_proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: hugodoc
  name: proxy
  namespace: blaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
      project: hugodoc
  template:
    metadata:
      labels:
        app: proxy
        project: hugodoc
    spec:
      containers:
        - args:
            - --https-address=:8443
            - --provider=openshift
            - --openshift-service-account=proxy
            - --upstream=http://localhost:8080
            - --tls-cert=/etc/tls/private/tls.crt
            - --tls-key=/etc/tls/private/tls.key
            - --cookie-secret=SECRET
          image: ghcr.io/tomasdedic/ocpdoc/hugogen:sha-86ece2ac
          imagePullPolicy: IfNotPresent
          name: oauth-proxy
          ports:
            - containerPort: 8443
              name: public
          volumeMounts:
            - mountPath: /etc/tls/private
              name: proxy-tls
        - image: ghcr.io/tomasdedic/ocpdoc/hugogen:sha-d8d5dfb1
          name: app
      imagePullSecrets:
        - name: gcr-pull
      serviceAccountName: proxy
      volumes:
        - name: proxy-tls
          secret:
            secretName: proxy-tls
