deploy_proxy/v1_service_proxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
  labels:
    project: hugodoc
  name: proxy
  namespace: blaster
spec:
  ports:
  - name: proxy
    port: 443
    targetPort: 8443
  selector:
    app: proxy
    project: hugodoc
