deploy_proxy/v1_route_proxy.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    project: hugodoc
  name: proxy
  namespace: blaster
spec:
  host: hugodoc
  tls:
    termination: Reencrypt
  to:
    kind: Service
    name: proxy
